[package]
name = "Converter"
version = "0.1.0"
authors = ["KiloJuliett"]
build = "src/build.rs"
edition = "2021"

[[bin]]
name = "convert"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
lazy_static = "1.4"
maplit = "1.0"
regex = "1.5"
rug = {version = "1.13", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
static_assertions = "1.1"
unicode-normalization = "0.1"

[dev-dependencies]
criterion = "0.3"
itertools = "0.10"
rstest = "0.12"
tempfile = "3.2"
test-case = "1.2"

[build-dependencies]
anyhow = "1.0"
bincode = "1.3"
criterion = "0.3"
itertools = "0.10"
lazy_static = "1.4"
maplit = "1.0"
regex = "1.5"
rstest = "0.12"
rug = {version = "1.13", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
static_assertions = "1.1"
tempfile = "3.2"
test-case = "1.2"
unicode-normalization = "0.1"